statum-macros/tests/ui/invalid_transition_conditional.stderr
error: Error: transition method `ProcessMachine<Init>::decide` returns an unsupported type.
       Found: `fn decide(self) -> Decision`
       Expected: `fn decide(self) -> ProcessMachine<NextState>`
       Reason: expected the impl target machine path directly, a source-backed type alias that expands to it, or that same machine path wrapped in a supported `Option`, `Result`, or `Branch` shape
       Fix: return `ProcessMachine<NextState>` directly.
       Primary branch: `Decision`
       Note: Supported wrappers are `::core::option::Option<...>`, `::core::result::Result<..., E>`, and `::statum::Branch<..., ...>`, plus ordinary source-declared type aliases that expand to those shapes.
             Imported aliases, macro-generated aliases, include-generated aliases, ambiguous aliases, and foreign machine paths are still rejected because transition introspection only follows source-backed type aliases it can resolve in-module.
  --> tests/ui/invalid_transition_conditional.rs:34:35
   |
34 |     fn decide(self, event: u8) -> Decision {
   |                                   ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_conditional.rs:41:2
   |
41 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_conditional.rs`
